--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
     "drizzle-kit": "^0.31.8",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.1.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
