feat: Google Analytics GA4 Integration
- GoogleAnalytics Component mit gtag.js erstellt
- Measurement ID: G-GEMGLB8TCG
- Event Tracking Helper Functions hinzugefügt
- Conversion Tracking für Google Ads vorbereitet
- In Layout integriert
- .env.example aktualisiert

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,8 @@ DISCORD_WEBHOOK_URL=
 # ===========================================
 # NODE_ENV=development
 # SEED_DEMO_DATA=true
+
+# ===========================================
+# GOOGLE ANALYTICS
+# ===========================================
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-GEMGLB8TCG
