--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^10.16.0",
     "grammy": "^1.21.0",
+    "lucide-react": "^0.563.0",
     "next": "^14.0.0",
     "next-intl": "^4.7.0",
     "nodemailer": "^7.0.12",
