--- a/admin/package.json
+++ b/admin/package.json
@@ -15,9 +15,11 @@
     "@capacitor/ios": "^8.0.0",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.45.0",
+    "clsx": "^2.1.1",
     "next": "14.2.35",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
