--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.2.0",
     "@stripe/stripe-js": "^8.6.1",
     "@supabase/supabase-js": "^2.45.0",
+    "canvas-confetti": "^1.9.4",
     "cheerio": "^1.1.2",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.45.1",
@@ -32,6 +33,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.0.0",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^18.2.0",
