--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.45.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.34.2",
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
